--- a/biography.html
+++ b/biography.html
@@ -40,7 +40,7 @@
     </nav>
       <div class="container">
       <div class="flex-container">
-        <div><img src="images/Headshot.JPG" class="img-fluid rounded bioimage" alt="Headshot"></div>
+        <div><img src="images/Headshot.jpg" class="img-fluid rounded bioimage" alt="Headshot"></div>
         <div class="biotext">
           <p class="headertext">
           'A versatile and charismatic performer', Jeremy Kleeman is a graduate of the Royal College of Music, a 2023 Samling Artist and a Melba Opera Trust Sambrook Scholar.
