--- a/media.html
+++ b/media.html
@@ -48,10 +48,10 @@
           </div>
         <br>
           <p class="sitetext">
-            Jeremy Kleeman sings Mozart's <i>Figaro</i>:
+            Jeremy Kleeman sings the Comet Aria from Jack Symonds'<i>Gilgamesh</i>:
           </p>
           <div class='embed-container'>
-            <iframe src='https://www.youtube.com/embed/W198zhWmEjw' frameborder='0' allowfullscreen></iframe>
+            <iframe src='https://www.youtube.com/embed/jqiva0gyPyk' frameborder='0' allowfullscreen></iframe>
           </div>
         </div>
     </body>
