--- a/contact.html
+++ b/contact.html
@@ -39,25 +39,21 @@
       </div>
     </nav>
       <br>
-      <div class="container sitetext">
-        Please leave me a message here!
-            <form
-          action="https://formspree.io/f/movplpan"
-          method="POST"
-        >
-        <div class="mb-3">
-          <input type="text" class="form-control" id="namesubmission1" placeholder="Name">
+        <div class="container sitetext">
+          <h4>Please leave me a message here!</h4>
+          <form action="https://formspree.io/f/movplpan" method="POST">
+            <div class="mb-3">
+              <input type="text" name="name" class="form-control" placeholder="Name" required>
+            </div>
+            <div class="mb-3">
+              <input type="email" name="_replyto" class="form-control" placeholder="Email Address" required>
+            </div>
+            <div class="mb-3">
+              <textarea name="message" class="form-control" rows="6" placeholder="Your Message" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary" style="float: right;">Send</button>
+          </form>
         </div>
-        <div class="mb-3">
-          <input type="email" class="form-control" id="emailsubmission1" placeholder="Email Address">
-        </div>
-        <div class="mb-3">
-          <textarea class="form-control" id="messagesubmission1" rows="6" placeholder="Your Message"></textarea>
-        </div>
-        <button id="sent" style="float: right;">Send</button>
-        <br>
-      </div>
-      </div>
 
     </body>
 </html>
