Add contact details and message prompt
Added contact information for Jeremy Kleeman and Stephen McAllan.

--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,10 @@
     </nav>
       <br>
         <div class="container sitetext">
+            <p class="text-center mt-4 mb-4">
+                <strong>Jeremy Kleeman</strong> is represented by 
+                <strong>Stephen McAllan</strong> at <strong>Emblem Artists</strong>, please direct enquires to stephen@emblemartists.com.
+            </p>
           <h4>Please leave me a message here!</h4>
           <form action="https://formspree.io/f/movplpan" method="POST">
             <div class="mb-3">
