--- a/contact.html
+++ b/contact.html
@@ -40,11 +40,12 @@
     </nav>
       <br>
         <div class="container sitetext">
-            <p class="text-center mt-4 mb-4">
+            <p class="text mt-4 mb-4">
                 <strong>Jeremy Kleeman</strong> is represented by 
                 <strong>Stephen McAllan</strong> at <strong>Emblem Artists</strong>, please direct enquires to stephen@emblemartists.com.
             </p>
-          <h4>Please leave me a message here!</h4>
+            <br>
+          <p>Please use this form to contact me:</p>
           <form action="https://formspree.io/f/movplpan" method="POST">
             <div class="mb-3">
               <input type="text" name="name" class="form-control" placeholder="Name" required>
