Correct name formatting in contact.html

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       <br>
         <div class="container sitetext">
             <p class="text mt-4 mb-4">
-                <strong>Jeremy Kleeman</strong> is represented by 
+                <strong>Jeremy</strong> is represented by 
                 <strong>Stephen McAllan</strong> at <strong>Emblem Artists</strong>, please direct enquires to stephen@emblemartists.com.
             </p>
             <br>
