--- a/biography.html
+++ b/biography.html
@@ -14,7 +14,7 @@
     <body>
     <nav class="navbar navbar-expand-md navbar-dark ">
       <div class="container">
-        <a class="navbar-brand align-middle" href="index.html">Jeremy Kleeman — Bass Baritone</a>
+        <a class="navbar-brand align-middle" href="index.html">Jeremy Kleeman</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,6 +29,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="media.html">Media</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="performances.html">Performances</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
