--- a/media.html
+++ b/media.html
@@ -31,7 +31,7 @@
               <a class="nav-link active" aria-current="page" href="media.html">Media</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="performances.html">Performances</a>
+              <a class="nav-link" href="performances.html">Performances</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
