--- a/performances.html
+++ b/performances.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
 
+<html lang="en">
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+        <link href="styles.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <title>Jeremy Kleeman | Performances</title>
+    </head>
+    <body>
+    <nav class="navbar navbar-expand-md navbar-dark ">
+      <div class="container">
+        <a class="navbar-brand align-middle" href="index.html">Jeremy Kleeman</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="container-fluid" style="padding-right:0px;">
+            <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="biography.html">Biography</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="media.html">Media</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="performances.html">Performances</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+      <br>
+      <div class="container">
+        <br>
+          <div class='embed-container'>
+            <iframe src='https://www.youtube.com/embed/cX2r6GB7SCw' frameborder='0' allowfullscreen></iframe>
+          </div>
+        <br>
+          <div class='embed-container'>
+            <iframe src='https://www.youtube.com/embed/jqiva0gyPyk' frameborder='0' allowfullscreen></iframe>
+          </div>
+        </div>
+    </body>
+</html>
