Add upcoming performances section to HTML
Added upcoming performances section with details.

--- a/performances.html
+++ b/performances.html
@@ -42,14 +42,42 @@
       </div>
     </nav>
       <br>
-      <div class="container">
-        <br>
-          <div class='embed-container'>
-            <iframe src='https://www.youtube.com/embed/cX2r6GB7SCw' frameborder='0' allowfullscreen></iframe>
-          </div>
-        <br>
-          <div class='embed-container'>
-            <iframe src='https://www.youtube.com/embed/jqiva0gyPyk' frameborder='0' allowfullscreen></iframe>
+      <div class="container my-5">
+  <h2 class="mb-4 text-center">Upcoming Performances</h2>
+  
+  <div class="row row-cols-1 row-cols-md-2 g-4">
+
+    <!-- Performance 1 -->
+    <div class="col">
+      <div class="card h-100 shadow-sm border-0">
+        <img src="IMAGE_URL_HERE" class="card-img-top" alt="Organisation logo or production image">
+        <div class="card-body">
+          <h5 class="card-title">The Work: <span class="fw-normal">Opera Title</span></h5>
+          <p class="mb-1"><strong>Role:</strong> Character Name</p>
+          <p class="mb-1"><strong>Company:</strong> Opera Company Name</p>
+          <p class="mb-1"><strong>Venue:</strong> Venue Name</p>
+          <p class="mb-1"><strong>Dates:</strong> 12–20 December 2025</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Performance 2 -->
+    <div class="col">
+      <div class="card h-100 shadow-sm border-0">
+        <img src="IMAGE_URL_HERE" class="card-img-top" alt="Organisation logo or production image">
+        <div class="card-body">
+          <h5 class="card-title">The Work: <span class="fw-normal">Opera Title</span></h5>
+          <p class="mb-1"><strong>Role:</strong> Character Name</p>
+          <p class="mb-1"><strong>Company:</strong> Opera Company Name</p>
+          <p class="mb-1"><strong>Venue:</strong> Venue Name</p>
+          <p class="mb-1"><strong>Dates:</strong> 12–20 December 2025</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Add more performances below -->
+    <!-- Copy-paste another .col block -->
+
           </div>
         </div>
     </body>
