Enhance performance card design and content
Updated performance cards to improve styling and structure.

--- a/performances.html
+++ b/performances.html
@@ -42,38 +42,41 @@
       </div>
     </nav>
       <br>
-      <div class="container my-5">
-  <h2 class="mb-4 text-center">Upcoming Performances</h2>
-  
+      <div class="container my-5 sitetext">
+  <h2 class="text-center mb-4" style="color: white;">Upcoming Performances</h2>
+
   <div class="row row-cols-1 row-cols-md-2 g-4">
 
     <!-- Performance 1 -->
     <div class="col">
-      <div class="card h-100 shadow-sm border-0">
-        <img src="IMAGE_URL_HERE" class="card-img-top" alt="Organisation logo or production image">
+      <div class="card h-100 bg-dark text-light border-0 shadow-sm" style="background-color:#12142f; border-radius:12px;">
+        <img src="IMAGE_URL_HERE" class="card-img-top" alt="Organisation image" style="border-top-left-radius:12px; border-top-right-radius:12px;">
         <div class="card-body">
-          <h5 class="card-title">The Work: <span class="fw-normal">Opera Title</span></h5>
-          <p class="mb-1"><strong>Role:</strong> Character Name</p>
-          <p class="mb-1"><strong>Company:</strong> Opera Company Name</p>
-          <p class="mb-1"><strong>Venue:</strong> Venue Name</p>
-          <p class="mb-1"><strong>Dates:</strong> 12–20 December 2025</p>
+          <h4 class="card-title" style="color:#e6e8f0;"><i>Opera Title</i></h4>
+          <p class="mb-1">Character Name</p>
+          <p class="mb-1">Opera Company Name</p>
+          <p class="mb-1">Venue Name</p>
+          <p class="mb-0">12–20 December 2025</p>
         </div>
       </div>
     </div>
 
     <!-- Performance 2 -->
     <div class="col">
-      <div class="card h-100 shadow-sm border-0">
-        <img src="IMAGE_URL_HERE" class="card-img-top" alt="Organisation logo or production image">
+      <div class="card h-100 bg-dark text-light border-0 shadow-sm" style="background-color:#12142f; border-radius:12px;">
+        <img src="IMAGE_URL_HERE" class="card-img-top" alt="Organisation image" style="border-top-left-radius:12px; border-top-right-radius:12px;">
         <div class="card-body">
-          <h5 class="card-title">The Work: <span class="fw-normal">Opera Title</span></h5>
-          <p class="mb-1"><strong>Role:</strong> Character Name</p>
-          <p class="mb-1"><strong>Company:</strong> Opera Company Name</p>
-          <p class="mb-1"><strong>Venue:</strong> Venue Name</p>
-          <p class="mb-1"><strong>Dates:</strong> 12–20 December 2025</p>
+          <h4 class="card-title" style="color:#e6e8f0;"><i>Opera Title</i></h4>
+          <p class="mb-1">Character Name</p>
+          <p class="mb-1">Opera Company Name</p>
+          <p class="mb-1">Venue Name</p>
+          <p class="mb-0">Dates</p>
         </div>
       </div>
     </div>
+
+  </div>
+</div>
 
     <!-- Add more performances below -->
     <!-- Copy-paste another .col block -->
