Update performance details and images in HTML

--- a/performances.html
+++ b/performances.html
@@ -43,20 +43,20 @@
     </nav>
       <br>
       <div class="container my-5 sitetext">
-  <h2 class="text-center mb-4" style="color: white;">Upcoming Performances</h2>
+  <h2 class="text-center mb-4" style="color: white;">Upcoming</h2>
 
   <div class="row row-cols-1 row-cols-md-2 g-4">
 
     <!-- Performance 1 -->
     <div class="col">
       <div class="card h-100 bg-dark text-light border-0 shadow-sm" style="background-color:#12142f; border-radius:12px;">
-        <img src="IMAGE_URL_HERE" class="card-img-top" alt="Organisation image" style="border-top-left-radius:12px; border-top-right-radius:12px;">
+        <img src="images/BrisMusicFestlogo.png" class="card-img-top" alt="Organisation image" style="border-top-left-radius:12px; border-top-right-radius:12px;">
         <div class="card-body">
-          <h4 class="card-title" style="color:#e6e8f0;"><i>Opera Title</i></h4>
-          <p class="mb-1">Character Name</p>
-          <p class="mb-1">Opera Company Name</p>
-          <p class="mb-1">Venue Name</p>
-          <p class="mb-0">12–20 December 2025</p>
+          <h4 class="card-title" style="color:#e6e8f0;"><i>Songs of Travel</i></h4>
+          <p class="mb-1">Recital</p>
+          <p class="mb-1">Brisbane Music Festival</p>
+          <p class="mb-1">Brisbane</p>
+          <p class="mb-0">16 November 2025</p>
         </div>
       </div>
     </div>
@@ -64,13 +64,56 @@
     <!-- Performance 2 -->
     <div class="col">
       <div class="card h-100 bg-dark text-light border-0 shadow-sm" style="background-color:#12142f; border-radius:12px;">
-        <img src="IMAGE_URL_HERE" class="card-img-top" alt="Organisation image" style="border-top-left-radius:12px; border-top-right-radius:12px;">
+        <img src="images/VOlogo.png" class="card-img-top" alt="Organisation image" style="border-top-left-radius:12px; border-top-right-radius:12px;">
         <div class="card-body">
-          <h4 class="card-title" style="color:#e6e8f0;"><i>Opera Title</i></h4>
-          <p class="mb-1">Character Name</p>
-          <p class="mb-1">Opera Company Name</p>
-          <p class="mb-1">Venue Name</p>
-          <p class="mb-0">Dates</p>
+          <h4 class="card-title" style="color:#e6e8f0;">Monteverdi/Kats Chernin <i>Coronation of Poppea</i></h4>
+          <p class="mb-1">Ottone</p>
+          <p class="mb-1">Victorian Opera</p>
+          <p class="mb-1">Palais Theatre</p>
+          <p class="mb-0">June 30, July 2 and July 4, 2026</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+    <!-- Add more performances below -->
+    <!-- Copy-paste another .col block -->
+
+          </div>
+        </div>
+
+        <div class="container my-5 sitetext">
+  <h2 class="text-center mb-4" style="color: white;">Recent</h2>
+
+  <div class="row row-cols-1 row-cols-md-2 g-4">
+
+    <!-- Performance 1 -->
+    <div class="col">
+      <div class="card h-100 bg-dark text-light border-0 shadow-sm" style="background-color:#12142f; border-radius:12px;">
+        <img src="images/PortFairylogo.png" class="card-img-top" alt="Organisation image" style="border-top-left-radius:12px; border-top-right-radius:12px;">
+        <div class="card-body">
+          <h4 class="card-title" style="color:#e6e8f0;">Cassomenos <i>Eva</i> (world premiere)</h4>
+          <p class="mb-1">Captain Gibb & Hugh Gibson</p>
+          <p class="mb-1">Port Fairy Spring Music Festival</p>
+          <p class="mb-1">Reardon Theatre</p>
+          <p class="mb-0">12 October 2025</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Performance 2 -->
+    <div class="col">
+      <div class="card h-100 bg-dark text-light border-0 shadow-sm" style="background-color:#12142f; border-radius:12px;">
+        <img src="images/NZSOlogo.png" class="card-img-top" alt="Organisation image" style="border-top-left-radius:12px; border-top-right-radius:12px;">
+        <div class="card-body">
+          <h4 class="card-title" style="color:#e6e8f0;">Rossini <i>Stabat Mater</i></h4>
+          <p class="mb-1">Bass Soloist</p>
+          <p class="mb-1">New Zealand Symphony Orchestra</p>
+          <p class="mb-1">Michael Fowler Centre, Wellington</p>
+            <p class="mb-1">Auckland Town Hall</p>
+          <p class="mb-0">25, 26 September 2025</p>
         </div>
       </div>
     </div>
