Add 'performances' class to container divs

--- a/performances.html
+++ b/performances.html
@@ -42,7 +42,7 @@
       </div>
     </nav>
       <br>
-      <div class="container my-5 sitetext">
+      <div class="container my-5 sitetext performances">
   <h2 class="text-center mb-4" style="color: white;">Upcoming</h2>
 
   <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -84,7 +84,7 @@
           </div>
         </div>
 
-        <div class="container my-5 sitetext">
+        <div class="container my-5 sitetext performances">
   <h2 class="text-center mb-4" style="color: white;">Recent</h2>
 
   <div class="row row-cols-1 row-cols-md-2 g-4">
