--- a/performances.html
+++ b/performances.html
@@ -64,7 +64,7 @@
     <!-- Performance 2 -->
     <div class="col">
       <div class="card h-100 bg-dark text-light border-0 shadow-sm" style="background-color:#12142f; border-radius:12px;">
-        <img src="images/VOlogo.png" class="card-img-top" alt="Organisation image" style="border-top-left-radius:12px; border-top-right-radius:12px;">
+        <img src="images/VictorianOperalogo.png" class="card-img-top" alt="Organisation image" style="border-top-left-radius:12px; border-top-right-radius:12px;">
         <div class="card-body">
           <h4 class="card-title" style="color:#e6e8f0;">Monteverdi/Kats Chernin <i>Coronation of Poppea</i></h4>
           <p class="mb-1">Ottone</p>
