--- a/performances.html
+++ b/performances.html
@@ -9,7 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <!-- Your custom stylesheet (will be updated below) -->
+    <!-- Bootstrap Icons (for the arrow) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Your custom stylesheet -->
     <link href="styles.css" rel="stylesheet">
 
     <!-- Google Fonts -->
@@ -53,12 +56,16 @@
     <div class="col">
       <div class="card perf-card h-100 border-0">
         <img src="images/BrisMusicFestlogo.png" class="card-img-top" alt="Brisbane Music Festival">
-        <div class="card-body">
-          <h4 class="card-title"><i>Songs of Travel</i></h4>
+        <div class="card-body d-flex flex-column">
+          <div class="perf-title">
+            <div class="work-title"><i>Songs of Travel</i></div>
+            <div class="composer">Vaughan Williams</div>
+          </div>
           <p class="card-subtitle mb-1">Recital</p>
           <p class="card-subtitle mb-1">Brisbane Music Festival</p>
           <p class="card-subtitle mb-1">Brisbane</p>
-          <p class="card-date">16 November 2025</p>
+          <p class="card-date mt-auto">16 November 2025</p>
+          <a href="#" class="more-info mt-2 align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
     </div>
@@ -66,18 +73,22 @@
     <!-- Performance 2 -->
     <div class="col">
       <div class="card perf-card h-100 border-0">
-        <img src="images/VictorianOperalogo.png" class="card-img-top" alt="Victorian Opera">
-        <div class="card-body">
-          <h4 class="card-title">Monteverdi/Kats Chernin <i>Coronation of Poppea</i></h4>
+        <img src="images/VictorianOperalogo.jpg" class="card-img-top" alt="Victorian Opera">
+        <div class="card-body d-flex flex-column">
+          <div class="perf-title">
+            <div class="work-title"><i>Coronation of Poppea</i></div>
+            <div class="composer">Monteverdi / Kats-Chernin</div>
+          </div>
           <p class="card-subtitle mb-1">Ottone</p>
           <p class="card-subtitle mb-1">Victorian Opera</p>
           <p class="card-subtitle mb-1">Palais Theatre</p>
-          <p class="card-date">June 30, July 2 &amp; 4, 2026</p>
+          <p class="card-date mt-auto">June 30, July 2 &amp; 4, 2026</p>
+          <a href="#" class="more-info mt-2 align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
     </div>
 
-  </div> <!-- /.row -->
+  </div>
 
   <!-- ==================== DIVIDER ==================== -->
   <div class="section-divider"></div>
@@ -91,12 +102,16 @@
     <div class="col">
       <div class="card perf-card h-100 border-0">
         <img src="images/PortFairylogo.png" class="card-img-top" alt="Port Fairy Spring Music Festival">
-        <div class="card-body">
-          <h4 class="card-title">Cassomenos <i>Eva</i> (world premiere)</h4>
+        <div class="card-body d-flex flex-column">
+          <div class="perf-title">
+            <div class="work-title"><i>Eva</i> (world premiere)</div>
+            <div class="composer">Cassomenos</div>
+          </div>
           <p class="card-subtitle mb-1">Captain Gibb &amp; Hugh Gibson</p>
           <p class="card-subtitle mb-1">Port Fairy Spring Music Festival</p>
           <p class="card-subtitle mb-1">Reardon Theatre</p>
-          <p class="card-date">12 October 2025</p>
+          <p class="card-date mt-auto">12 October 2025</p>
+          <a href="#" class="more-info mt-2 align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
     </div>
@@ -105,23 +120,25 @@
     <div class="col">
       <div class="card perf-card h-100 border-0">
         <img src="images/NZSOlogo.png" class="card-img-top" alt="New Zealand Symphony Orchestra">
-        <div class="card-body">
-          <h4 class="card-title">Rossini <i>Stabat Mater</i></h4>
+        <div class="card-body d-flex flex-column">
+          <div class="perf-title">
+            <div class="work-title"><i>Stabat Mater</i></div>
+            <div class="composer">Rossini</div>
+          </div>
           <p class="card-subtitle mb-1">Bass Soloist</p>
           <p class="card-subtitle mb-1">New Zealand Symphony Orchestra</p>
           <p class="card-subtitle mb-1">Michael Fowler Centre, Wellington</p>
           <p class="card-subtitle mb-1">Auckland Town Hall</p>
-          <p class="card-date">25 &amp; 26 September 2025</p>
+          <p class="card-date mt-auto">25 &amp; 26 September 2025</p>
+          <a href="#" class="more-info mt-2 align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
     </div>
 
-  </div> <!-- /.row -->
-</div> <!-- /.container -->
+  </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
-
-
