--- a/performances.html
+++ b/performances.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <!-- Bootstrap Icons (for the arrow) -->
+    <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Your custom stylesheet -->
@@ -55,13 +55,12 @@
     <!-- Performance 1 -->
     <div class="col">
       <div class="card perf-card h-100 border-0">
-        <img src="images/BrisMusicFestlogo.png" class="card-img-top" alt="Brisbane Music Festival">
         <div class="card-body d-flex flex-column">
           <div class="perf-title">
             <div class="work-title"><i>Songs of Travel</i></div>
             <div class="composer">Vaughan Williams</div>
           </div>
-          <p class="card-subtitle mb-1">Recital</p>
+          <div class="perf-role">Recital</div>
           <p class="card-subtitle mb-1">Brisbane Music Festival</p>
           <p class="card-subtitle mb-1">Brisbane</p>
           <p class="card-date mt-auto">16 November 2025</p>
@@ -73,13 +72,12 @@
     <!-- Performance 2 -->
     <div class="col">
       <div class="card perf-card h-100 border-0">
-        <img src="images/VictorianOperalogo.jpg" class="card-img-top" alt="Victorian Opera">
         <div class="card-body d-flex flex-column">
           <div class="perf-title">
             <div class="work-title"><i>Coronation of Poppea</i></div>
             <div class="composer">Monteverdi / Kats-Chernin</div>
           </div>
-          <p class="card-subtitle mb-1">Ottone</p>
+          <div class="perf-role">Ottone</div>
           <p class="card-subtitle mb-1">Victorian Opera</p>
           <p class="card-subtitle mb-1">Palais Theatre</p>
           <p class="card-date mt-auto">June 30, July 2 &amp; 4, 2026</p>
@@ -101,13 +99,12 @@
     <!-- Performance 1 -->
     <div class="col">
       <div class="card perf-card h-100 border-0">
-        <img src="images/PortFairylogo.png" class="card-img-top" alt="Port Fairy Spring Music Festival">
         <div class="card-body d-flex flex-column">
           <div class="perf-title">
             <div class="work-title"><i>Eva</i> (world premiere)</div>
             <div class="composer">Cassomenos</div>
           </div>
-          <p class="card-subtitle mb-1">Captain Gibb &amp; Hugh Gibson</p>
+          <div class="perf-role">Captain Gibb &amp; Hugh Gibson</div>
           <p class="card-subtitle mb-1">Port Fairy Spring Music Festival</p>
           <p class="card-subtitle mb-1">Reardon Theatre</p>
           <p class="card-date mt-auto">12 October 2025</p>
@@ -119,13 +116,12 @@
     <!-- Performance 2 -->
     <div class="col">
       <div class="card perf-card h-100 border-0">
-        <img src="images/NZSOlogo.png" class="card-img-top" alt="New Zealand Symphony Orchestra">
         <div class="card-body d-flex flex-column">
           <div class="perf-title">
             <div class="work-title"><i>Stabat Mater</i></div>
             <div class="composer">Rossini</div>
           </div>
-          <p class="card-subtitle mb-1">Bass Soloist</p>
+          <div class="perf-role">Bass Soloist</div>
           <p class="card-subtitle mb-1">New Zealand Symphony Orchestra</p>
           <p class="card-subtitle mb-1">Michael Fowler Centre, Wellington</p>
           <p class="card-subtitle mb-1">Auckland Town Hall</p>
