--- a/performances.html
+++ b/performances.html
@@ -50,38 +50,42 @@
 <div class="container my-5 sitetext">
   <h2 class="text-center mb-5 text-white section-title">Upcoming</h2>
 
-  <div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="row row-cols-1 row-cols-md-2 g-5 justify-content-center">
 
     <!-- Performance 1 -->
     <div class="col">
-      <div class="card perf-card h-100 border-0">
-        <div class="card-body d-flex flex-column">
-          <div class="perf-title">
-            <div class="work-title"><i>Songs of Travel</i></div>
-            <div class="composer">Vaughan Williams</div>
-          </div>
-          <div class="perf-role">Recital</div>
+      <div class="card perf-card h-100 border-0 text-center">
+        <div class="card-body d-flex flex-column justify-content-center p-4">
+          <h3 class="work-title mb-1"><i>Songs of Travel</i></h3>
+          <p class="composer mb-3">Vaughan Williams</p>
+
+          <h5 class="perf-role mb-3">Recital</h5>
+
           <p class="card-subtitle mb-1">Brisbane Music Festival</p>
-          <p class="card-subtitle mb-1">Brisbane</p>
-          <p class="card-date mt-auto">16 November 2025</p>
-          <a href="#" class="more-info mt-2 align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
+          <p class="card-subtitle mb-3">Brisbane</p>
+
+          <p class="card-date mb-3">16 November 2025</p>
+
+          <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
     </div>
 
     <!-- Performance 2 -->
     <div class="col">
-      <div class="card perf-card h-100 border-0">
-        <div class="card-body d-flex flex-column">
-          <div class="perf-title">
-            <div class="work-title"><i>Coronation of Poppea</i></div>
-            <div class="composer">Monteverdi / Kats-Chernin</div>
-          </div>
-          <div class="perf-role">Ottone</div>
+      <div class="card perf-card h-100 border-0 text-center">
+        <div class="card-body d-flex flex-column justify-content-center p-4">
+          <h3 class="work-title mb-1"><i>Coronation of Poppea</i></h3>
+          <p class="composer mb-3">Monteverdi / Kats-Chernin</p>
+
+          <h5 class="perf-role mb-3">Ottone</h5>
+
           <p class="card-subtitle mb-1">Victorian Opera</p>
-          <p class="card-subtitle mb-1">Palais Theatre</p>
-          <p class="card-date mt-auto">June 30, July 2 &amp; 4, 2026</p>
-          <a href="#" class="more-info mt-2 align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
+          <p class="card-subtitle mb-3">Palais Theatre</p>
+
+          <p class="card-date mb-3">June 30, July 2 &amp; 4, 2026</p>
+
+          <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
     </div>
@@ -94,39 +98,43 @@
   <!-- ==================== RECENT ==================== -->
   <h2 class="text-center mb-5 text-white section-title">Recent</h2>
 
-  <div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="row row-cols-1 row-cols-md-2 g-5 justify-content-center">
 
     <!-- Performance 1 -->
     <div class="col">
-      <div class="card perf-card h-100 border-0">
-        <div class="card-body d-flex flex-column">
-          <div class="perf-title">
-            <div class="work-title"><i>Eva</i> (world premiere)</div>
-            <div class="composer">Cassomenos</div>
-          </div>
-          <div class="perf-role">Captain Gibb &amp; Hugh Gibson</div>
+      <div class="card perf-card h-100 border-0 text-center">
+        <div class="card-body d-flex flex-column justify-content-center p-4">
+          <h3 class="work-title mb-1"><i>Eva</i> (world premiere)</h3>
+          <p class="composer mb-3">Cassomenos</p>
+
+          <h5 class="perf-role mb-3">Captain Gibb &amp; Hugh Gibson</h5>
+
           <p class="card-subtitle mb-1">Port Fairy Spring Music Festival</p>
-          <p class="card-subtitle mb-1">Reardon Theatre</p>
-          <p class="card-date mt-auto">12 October 2025</p>
-          <a href="#" class="more-info mt-2 align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
+          <p class="card-subtitle mb-3">Reardon Theatre</p>
+
+          <p class="card-date mb-3">12 October 2025</p>
+
+          <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
     </div>
 
     <!-- Performance 2 -->
     <div class="col">
-      <div class="card perf-card h-100 border-0">
-        <div class="card-body d-flex flex-column">
-          <div class="perf-title">
-            <div class="work-title"><i>Stabat Mater</i></div>
-            <div class="composer">Rossini</div>
-          </div>
-          <div class="perf-role">Bass Soloist</div>
+      <div class="card perf-card h-100 border-0 text-center">
+        <div class="card-body d-flex flex-column justify-content-center p-4">
+          <h3 class="work-title mb-1"><i>Stabat Mater</i></h3>
+          <p class="composer mb-3">Rossini</p>
+
+          <h5 class="perf-role mb-3">Bass Soloist</h5>
+
           <p class="card-subtitle mb-1">New Zealand Symphony Orchestra</p>
           <p class="card-subtitle mb-1">Michael Fowler Centre, Wellington</p>
-          <p class="card-subtitle mb-1">Auckland Town Hall</p>
-          <p class="card-date mt-auto">25 &amp; 26 September 2025</p>
-          <a href="#" class="more-info mt-2 align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
+          <p class="card-subtitle mb-3">Auckland Town Hall</p>
+
+          <p class="card-date mb-3">25 &amp; 26 September 2025</p>
+
+          <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
     </div>
