--- a/performances.html
+++ b/performances.html
@@ -61,10 +61,12 @@
 
           <h5 class="perf-role mb-3">Recital</h5>
 
-          <p class="card-subtitle mb-1">Brisbane Music Festival</p>
-          <p class="card-subtitle mb-3">Brisbane</p>
+          <h6 class="company mb-3">Brisbane Music Festival</h6>
 
-          <p class="card-date mb-3">16 November 2025</p>
+          <div class="venue-date mb-3">
+            <p class="mb-1">Brisbane</p>
+            <p class="card-date">16 November 2025</p>
+          </div>
 
           <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
@@ -80,10 +82,12 @@
 
           <h5 class="perf-role mb-3">Ottone</h5>
 
-          <p class="card-subtitle mb-1">Victorian Opera</p>
-          <p class="card-subtitle mb-3">Palais Theatre</p>
+          <h6 class="company mb-3">Victorian Opera</h6>
 
-          <p class="card-date mb-3">June 30, July 2 &amp; 4, 2026</p>
+          <div class="venue-date mb-3">
+            <p class="mb-1">Palais Theatre</p>
+            <p class="card-date">June 30, July 2 &amp; 4, 2026</p>
+          </div>
 
           <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
@@ -109,10 +113,12 @@
 
           <h5 class="perf-role mb-3">Captain Gibb &amp; Hugh Gibson</h5>
 
-          <p class="card-subtitle mb-1">Port Fairy Spring Music Festival</p>
-          <p class="card-subtitle mb-3">Reardon Theatre</p>
+          <h6 class="company mb-3">Port Fairy Spring Music Festival</h6>
 
-          <p class="card-date mb-3">12 October 2025</p>
+          <div class="venue-date mb-3">
+            <p class="mb-1">Reardon Theatre</p>
+            <p class="card-date">12 October 2025</p>
+          </div>
 
           <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
@@ -128,21 +134,4 @@
 
           <h5 class="perf-role mb-3">Bass Soloist</h5>
 
-          <p class="card-subtitle mb-1">New Zealand Symphony Orchestra</p>
-          <p class="card-subtitle mb-1">Michael Fowler Centre, Wellington</p>
-          <p class="card-subtitle mb-3">Auckland Town Hall</p>
-
-          <p class="card-date mb-3">25 &amp; 26 September 2025</p>
-
-          <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</body>
-</html>
+          <h6 class="company mb-3">New Zealand Symphony Orchestra</
