--- a/performances.html
+++ b/performances.html
@@ -65,7 +65,7 @@
 
           <div class="venue-date mb-3">
             <p class="mb-1">Brisbane</p>
-            <p class="card-date">16 November 2025</p>
+            <p class="mb-1">16 November 2025</p>
           </div>
 
           <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
@@ -86,7 +86,7 @@
 
           <div class="venue-date mb-3">
             <p class="mb-1">Palais Theatre</p>
-            <p class="card-date">June 30, July 2 &amp; 4, 2026</p>
+            <p class="mb-1">June 30, July 2 &amp; 4, 2026</p>
           </div>
 
           <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
@@ -117,7 +117,7 @@
 
           <div class="venue-date mb-3">
             <p class="mb-1">Reardon Theatre</p>
-            <p class="card-date">12 October 2025</p>
+            <p class="mb-1">12 October 2025</p>
           </div>
 
           <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
@@ -134,4 +134,23 @@
 
           <h5 class="perf-role mb-3">Bass Soloist</h5>
 
-          <h6 class="company mb-3">New Zealand Symphony Orchestra</
+          <h6 class="company mb-3">New Zealand Symphony Orchestra</h6>
+
+          <div class="venue-date mb-3">
+            <p class="mb-1">Michael Fowler Centre, Wellington</p>
+            <p class="mb-1">Auckland Town Hall</p>
+            <p class="mb-1">25 &amp; 26 September 2025</p>
+          </div>
+
+          <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+</body>
+</html>
