--- a/performances.html
+++ b/performances.html
@@ -22,8 +22,14 @@
 </head>
 <body>
 
-<!-- ==================== NAVBAR ==================== -->
-<nav class="navbar navbar-expand-md navbar-dark">
+<!-- ==================== HERO SECTION (BEHIND NAVBAR) ==================== -->
+<div class="hero-section">
+  <img src="images/OscarandLucindaHero.jpg" class="hero-img" alt="Jeremy Kleeman on stage">
+  <div class="hero-overlay"></div>
+</div>
+
+<!-- ==================== NAVBAR (ON TOP OF HERO) ==================== -->
+<nav class="navbar navbar-expand-md navbar-dark position-absolute top-0 start-0 w-100" style="z-index: 10;">
   <div class="container">
     <a class="navbar-brand align-middle" href="index.html">Jeremy Kleeman</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -44,22 +50,8 @@
   </div>
 </nav>
 
-<!-- ==================== HERO SECTION (BELOW NAVBAR) ==================== -->
-<div class="hero-section">
-  <div class="hero-img-container">
-    <img src="images/OscarandLucindaHero.jpg" class="hero-img" alt="Jeremy Kleeman on stage">
-    <div class="hero-overlay"></div>
-  </div>
-  <div class="container position-relative">
-    <div class="hero-text text-center text-white py-5">
-      <h1 class="display-4 fw-bold mb-2">Performances</h1>
-      <p class="lead">Upcoming &amp; Recent</p>
-    </div>
-  </div>
-</div>
-
 <!-- ==================== UPCOMING ==================== -->
-<div class="container my-5 sitetext">
+<div class="container my-5 sitetext pt-5">
   <h2 class="text-center mb-5 text-white section-title">Upcoming</h2>
 
   <div class="row row-cols-1 row-cols-md-2 g-5 justify-content-center">
@@ -70,16 +62,12 @@
         <div class="card-body d-flex flex-column justify-content-center p-4">
           <h3 class="work-title mb-1"><i>Songs of Travel</i></h3>
           <p class="composer mb-3">Vaughan Williams</p>
-
           <h5 class="perf-role mb-3">Recital</h5>
-
           <h6 class="company mb-3">Brisbane Music Festival</h6>
-
           <div class="venue-date mb-3">
             <p class="mb-1">Brisbane</p>
             <p class="mb-1">16 November 2025</p>
           </div>
-
           <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
@@ -91,16 +79,12 @@
         <div class="card-body d-flex flex-column justify-content-center p-4">
           <h3 class="work-title mb-1"><i>Coronation of Poppea</i></h3>
           <p class="composer mb-3">Monteverdi / Kats-Chernin</p>
-
           <h5 class="perf-role mb-3">Ottone</h5>
-
           <h6 class="company mb-3">Victorian Opera</h6>
-
           <div class="venue-date mb-3">
             <p class="mb-1">Palais Theatre</p>
             <p class="mb-1">June 30, July 2 &amp; 4, 2026</p>
           </div>
-
           <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
@@ -122,16 +106,12 @@
         <div class="card-body d-flex flex-column justify-content-center p-4">
           <h3 class="work-title mb-1"><i>Eva</i> (world premiere)</h3>
           <p class="composer mb-3">Cassomenos</p>
-
           <h5 class="perf-role mb-3">Captain Gibb &amp; Hugh Gibson</h5>
-
           <h6 class="company mb-3">Port Fairy Spring Music Festival</h6>
-
           <div class="venue-date mb-3">
             <p class="mb-1">Reardon Theatre</p>
             <p class="mb-1">12 October 2025</p>
           </div>
-
           <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
@@ -143,17 +123,13 @@
         <div class="card-body d-flex flex-column justify-content-center p-4">
           <h3 class="work-title mb-1"><i>Stabat Mater</i></h3>
           <p class="composer mb-3">Rossini</p>
-
           <h5 class="perf-role mb-3">Bass Soloist</h5>
-
           <h6 class="company mb-3">New Zealand Symphony Orchestra</h6>
-
           <div class="venue-date mb-3">
             <p class="mb-1">Michael Fowler Centre, Wellington</p>
             <p class="mb-1">Auckland Town Hall</p>
             <p class="mb-1">25 &amp; 26 September 2025</p>
           </div>
-
           <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
@@ -164,5 +140,13 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+<!-- Navbar scroll effect -->
+<script>
+  window.addEventListener('scroll', () => {
+    const navbar = document.querySelector('.navbar');
+    navbar.classList.toggle('scrolled', window.scrollY > 50);
+  });
+</script>
 </body>
 </html>
