--- a/performances.html
+++ b/performances.html
@@ -56,18 +56,18 @@
       <div class="card perf-card h-100 border-0 text-center">
         <div class="card-body d-flex flex-column justify-content-center p-4">
           <h3 class="work-title mb-1"><i>Songs of Travel</i></h3>
-          <p class="composer mb-3">Vaughan Williams</p>
+          <p class="composer mb-3">Vaughan Williams, Palmer and Laitman</p>
 
-          <h5 class="perf-role mb-3">Recital</h5>
+          <h5 class="perf-role mb-3">Recital with Alex Raineri</h5>
 
           <h6 class="company mb-3">Brisbane Music Festival</h6>
 
           <div class="venue-date mb-3">
-            <p class="mb-1">Brisbane</p>
+            <p class="mb-1">FourthWall Arts, Brisbane</p>
             <p class="mb-1">16 November 2025</p>
           </div>
 
-          <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
+          <a href="https://www.brismusicfestival.com/product/songs-of-travel" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
     </div>
