--- a/performances.html
+++ b/performances.html
@@ -85,10 +85,10 @@
 
           <div class="venue-date mb-3">
             <p class="mb-1">Palais Theatre</p>
-            <p class="mb-1">June 30, July 2 &amp; 4, 2026</p>
+            <p class="mb-1">30 June, 2 &amp; 4 July 2026</p>
           </div>
 
-          <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
+          <a href="https://www.victorianopera.com.au/production/the-coronation-of-poppea/" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
     </div>
@@ -119,7 +119,7 @@
             <p class="mb-1">12 October 2025</p>
           </div>
 
-          <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
+          <a href="https://portfairyspringfest.com.au/performance/closing-gala-eva/" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
     </div>
@@ -138,10 +138,10 @@
           <div class="venue-date mb-3">
             <p class="mb-1">Michael Fowler Centre, Wellington</p>
             <p class="mb-1">Auckland Town Hall</p>
-            <p class="mb-1">25 &amp; 26 September 2025</p>
+            <p class="mb-1">2 &amp; 3 October 2025</p>
           </div>
 
-          <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
+          <a href="https://www.rnz.co.nz/concert/programmes/musicalive/audio/2019006741/live-nzso-and-voices-nz-stabat-mater-a-mother-s-love" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
     </div>
