--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                 <strong>Stephen McAllan</strong> at <strong>Emblem Artists</strong>, please direct enquires to stephen@emblemartists.com.
             </p>
             <br>
-          <p>Please use this form to contact me:</p>
+          <p>Contact Jeremy here:</p>
           <form action="https://formspree.io/f/movplpan" method="POST">
             <div class="mb-3">
               <input type="text" name="name" class="form-control" placeholder="Name" required>
