--- a/index.html
+++ b/index.html
@@ -19,14 +19,21 @@
 </head>
 <body>
 
-<!-- ==================== NAVBAR (UNCHANGED) ==================== -->
+<!-- ==================== NAVBAR ==================== -->
 <nav class="navbar navbar-expand-md navbar-dark">
   <div class="container">
-    <a class="navbar-brand align-middle" href="index.html">Jeremy Kleeman</a>
+    
+    <!-- BRAND — BIGGER, BOLDER, GLOWING -->
+    <a class="navbar-brand d-flex align-items-center" href="index.html">
+      <span class="brand-name">Jeremy</span>
+      <span class="brand-surname">Kleeman</span>
+    </a>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNav">
       <div class="container-fluid" style="padding-right:0;">
         <ul class="navbar-nav ms-auto">
