--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
 </head>
 <body>
 
-<!-- ==================== NAVBAR ==================== -->
-<nav class="navbar navbar-expand-md navbar-dark">
+<<nav class="navbar navbar-expand-md navbar-dark">
   <div class="container">
     
-    <!-- BRAND — BIGGER, BOLDER, GLOWING -->
-    <a class="navbar-brand d-flex align-items-center" href="index.html">
-      <span class="brand-name">Jeremy</span>
-      <span class="brand-surname">Kleeman</span>
+    <!-- BRAND — WHITE + BLUE GLOW + PULSE -->
+    <a class="navbar-brand" href="index.html">
+      <span class="brand-full">Jeremy Kleeman</span>
     </a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -94,6 +92,18 @@
           <h3><i>HMS Pinafore</i> — State Opera of South Australia, 2023</h3>
           <p>“Jeremy Kleeman's wit, energy and constant focus power his performance. He can act, he can move and he can sing.”</p>
           <p class="reviewer">— Pat Wilson, <em>Glam Adelaide</em></p>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <picture>
+          <source media="(max-width: 767px)" srcset="images/NEW-mobile.jpg">
+          <img src="images/GilgameshHero.jpg" class="carousel-img" alt="...">
+        </picture>
+        <div class="review-caption">
+          <h3><i>Gilgamesh</i> — Opera Australia / Sydney Chamber Opera, 2024</h3>
+          <p>“"Kleeman as Gilgamesh dominates the opera, creating a powerful, multi-dimensional character. He possesses a beautifully smooth baritone voice, rich in colour, wide in range, with an expressive and limpid vocal line.”</p>
+          <p class="reviewer">— Michael Haliwell, <em>Australian Book Review</em></p>
         </div>
       </div>
 
