--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<<nav class="navbar navbar-expand-md navbar-dark">
+<nav class="navbar navbar-expand-md navbar-dark">
   <div class="container">
     
     <!-- BRAND — WHITE + BLUE GLOW + PULSE -->
