--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </picture>
         <div class="review-caption">
           <h3><i>Gilgamesh</i> — Opera Australia / Sydney Chamber Opera, 2024</h3>
-          <p>“"Kleeman as Gilgamesh dominates the opera, creating a powerful, multi-dimensional character. He possesses a beautifully smooth baritone voice, rich in colour, wide in range, with an expressive and limpid vocal line.”</p>
+          <p>“Kleeman as Gilgamesh dominates the opera, creating a powerful, multi-dimensional character. He possesses a beautifully smooth baritone voice, rich in colour, wide in range, with an expressive and limpid vocal line.”</p>
           <p class="reviewer">— Michael Haliwell, <em>Australian Book Review</em></p>
         </div>
       </div>
