--- a/biography.html
+++ b/biography.html
@@ -47,19 +47,19 @@
 <div class="container my-5">
   <div class="row align-items-center g-5">
     
-    <!-- HEADSHOT -->
-    <div class="col-12 col-md-5 text-center">
-      <img src="images/Headshot.webp" class="bio-headshot img-fluid rounded shadow-lg" alt="Jeremy Kleeman – Headshot">
-    </div>
+   <div class="row align-items-center g-5">
+  <!-- HEADSHOT -->
+  <div class="col-12 col-md-5 d-flex justify-content-center">
+    <img src="images/Headshot.jpg" class="bio-headshot img-fluid rounded shadow-lg" alt="Jeremy Kleeman – Headshot">
+  </div>
 
-    <!-- BIO TEXT -->
-    <div class="col-12 col-md-7">
-      <div class="bio-content">
-        
-        <p class="bio-intro headertext">
-          'A versatile and charismatic performer', Jeremy Kleeman is a graduate of the Royal College of Music, 
-          a 2023 Samling Artist and a Melba Opera Trust Sambrook Scholar.
-        </p>
+  <!-- BIO TEXT -->
+  <div class="col-12 col-md-7">
+    <div class="bio-content">
+      <p class="bio-intro headertext">
+        'A versatile and charismatic performer', Jeremy Kleeman is a graduate of the Royal College of Music, 
+        a 2023 Samling Artist and a Melba Opera Trust Sambrook Scholar.
+      </p>
 
         <p>
           Recently, <strong>Jeremy Kleeman</strong> performed <em>Bass Soloist</em> in Rossini’s 
