--- a/biography.html
+++ b/biography.html
@@ -43,24 +43,23 @@
   </div>
 </nav>
 
-<!-- ==================== BIO HERO SECTION ==================== -->
+<!-- BIO HERO SECTION -->
 <div class="container my-5">
-  <div class="row align-items-center g-5">
+  <div class="bio-grid">
     
-   <div class="row align-items-center g-5">
-  <!-- HEADSHOT -->
-  <div class="col-12 col-md-5 d-flex justify-content-center">
-    <img src="images/Headshot.jpg" class="bio-headshot img-fluid rounded shadow-lg" alt="Jeremy Kleeman – Headshot">
-  </div>
+    <!-- HEADSHOT -->
+    <div class="bio-image-cell d-flex justify-content-center align-items-center">
+      <img src="images/Headshot.jpg" class="bio-headshot img-fluid rounded shadow-lg" alt="Jeremy Kleeman – Headshot">
+    </div>
 
-  <!-- BIO TEXT -->
-  <div class="col-12 col-md-7">
-    <div class="bio-content">
-      <p class="bio-intro headertext">
-        'A versatile and charismatic performer', Jeremy Kleeman is a graduate of the Royal College of Music, 
-        a 2023 Samling Artist and a Melba Opera Trust Sambrook Scholar.
-      </p>
-
+    <!-- BIO TEXT -->
+    <div class="bio-text-cell d-flex align-items-center">
+      <div class="bio-content">
+        <p class="bio-intro headertext">
+          'A versatile and charismatic performer', Jeremy Kleeman is a graduate of the Royal College of Music, 
+          a Samling Artist and a Melba Opera Trust Sambrook Scholar.
+        </p>
+        
         <p>
           Recently, <strong>Jeremy Kleeman</strong> performed <em>Bass Soloist</em> in Rossini’s 
           <em>Stabat Mater</em> for Tasmanian Symphony Orchestra and New Zealand Symphony Orchestra, 
