--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!-- SLIDE 1 -->
       <div class="carousel-item">
         <picture>
-          <source media="(max-width: 767px)" srcset="images/CosiOQ-mobile.jpg">
+          <source media="(max-width: 767px)" srcset="images/CosiOQ.jpg">
           <img src="images/CosiOQ.jpg" class="carousel-img" alt="Così fan tutte — Opera Queensland">
         </picture>
         <div class="review-caption">
@@ -72,7 +72,7 @@
       <!-- SLIDE 2 -->
       <div class="carousel-item">
         <picture>
-          <source media="(max-width: 767px)" srcset="images/FigaroSOSA2-mobile.jpg">
+          <source media="(max-width: 767px)" srcset="images/FigaroSOSA2.jpg">
           <img src="images/FigaroSOSA2.jpg" class="carousel-img" alt="Le nozze di Figaro — State Opera SA">
         </picture>
         <div class="review-caption">
@@ -85,7 +85,7 @@
       <!-- SLIDE 3 -->
       <div class="carousel-item">
         <picture>
-          <source media="(max-width: 767px)" srcset="images/CorcoranSOSA-mobile.jpg">
+          <source media="(max-width: 767px)" srcset="images/CorcoranSOSA.jpg">
           <img src="images/CorcoranSOSA.jpg" class="carousel-img" alt="HMS Pinafore — State Opera SA">
         </picture>
         <div class="review-caption">
@@ -97,7 +97,7 @@
 
       <div class="carousel-item">
         <picture>
-          <source media="(max-width: 767px)" srcset="images/NEW-mobile.jpg">
+          <source media="(max-width: 767px)" srcset="images/GilgameshHero-mobile.jpg">
           <img src="images/GilgameshHero.jpg" class="carousel-img" alt="...">
         </picture>
         <div class="review-caption">
