--- a/biography.html
+++ b/biography.html
@@ -48,12 +48,12 @@
   <div class="bio-grid">
     
     <!-- HEADSHOT -->
-    <div class="bio-image-cell d-flex justify-content-center align-items-center">
+    <div class="bio-image-cell">
       <img src="images/Headshot.jpg" class="bio-headshot img-fluid rounded shadow-lg" alt="Jeremy Kleeman – Headshot">
     </div>
 
     <!-- BIO TEXT -->
-    <div class="bio-text-cell d-flex align-items-center">
+    <div class="bio-text-cell">
       <div class="bio-content">
         <p class="bio-intro headertext">
           'A versatile and charismatic performer', Jeremy Kleeman is a graduate of the Royal College of Music, 
