--- a/media.html
+++ b/media.html
@@ -65,75 +65,72 @@
       </div>
     </section>
 
-    <!-- PRODUCTION GALLERY -->
-<section class="photo-gallery py-5">
+    <!-- MEDIA MOSAIC GALLERY -->
+<section class="media-mosaic py-5">
   <div class="container">
-    <h2 class="media-section-title text-center mb-5">Production Gallery</h2>
-    <div class="row g-3">
-      <div class="col-sm-6 col-md-4" data-aos="zoom-in">
-        <img src="images/opera1.jpg" class="img-fluid rounded shadow-sm hover-zoom" alt="Opera production photo 1">
+    <h2 class="media-section-title text-center mb-5">Gallery & Reviews</h2>
+
+    <div class="mosaic-grid">
+      <!-- IMAGES -->
+      <div class="mosaic-item" data-aos="zoom-in">
+        <img src="images/opera1.jpg" alt="Opera production 1">
       </div>
-      <div class="col-sm-6 col-md-4" data-aos="zoom-in" data-aos-delay="100">
-        <img src="images/opera2.jpg" class="img-fluid rounded shadow-sm hover-zoom" alt="Opera production photo 2">
+
+      <div class="mosaic-item review-tile" data-aos="fade-up">
+        <blockquote>
+          “Kleeman’s voice exudes warmth and intelligence — a commanding presence.”
+          <footer>— The Sydney Morning Herald</footer>
+        </blockquote>
       </div>
-      <div class="col-sm-6 col-md-4" data-aos="zoom-in" data-aos-delay="200">
-        <img src="images/opera3.jpg" class="img-fluid rounded shadow-sm hover-zoom" alt="Opera production photo 3">
+
+      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="100">
+        <img src="images/opera2.jpg" alt="Opera production 2">
       </div>
-      <div class="col-sm-6 col-md-4" data-aos="zoom-in" data-aos-delay="300">
-        <img src="images/opera4.jpg" class="img-fluid rounded shadow-sm hover-zoom" alt="Opera production photo 4">
+
+      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="200">
+        <img src="images/opera3.jpg" alt="Opera production 3">
       </div>
-      <div class="col-sm-6 col-md-4" data-aos="zoom-in" data-aos-delay="400">
-        <img src="images/opera5.jpg" class="img-fluid rounded shadow-sm hover-zoom" alt="Opera production photo 5">
+
+      <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="300">
+        <blockquote>
+          “A masterclass in subtlety and precision — deeply moving.”
+          <footer>— Limelight Magazine</footer>
+        </blockquote>
       </div>
-      <div class="col-sm-6 col-md-4" data-aos="zoom-in" data-aos-delay="500">
-        <img src="images/opera6.jpg" class="img-fluid rounded shadow-sm hover-zoom" alt="Opera production photo 6">
+
+      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="400">
+        <img src="images/opera4.jpg" alt="Opera production 4">
       </div>
-      <div class="col-sm-6 col-md-4" data-aos="zoom-in" data-aos-delay="600">
-        <img src="images/opera7.jpg" class="img-fluid rounded shadow-sm hover-zoom" alt="Opera production photo 7">
+
+      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="500">
+        <img src="images/opera5.jpg" alt="Opera production 5">
       </div>
-      <div class="col-sm-6 col-md-4" data-aos="zoom-in" data-aos-delay="700">
-        <img src="images/opera8.jpg" class="img-fluid rounded shadow-sm hover-zoom" alt="Opera production photo 8">
+
+      <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="600">
+        <blockquote>
+          “Kleeman commands the stage with effortless musicality and psychological insight.”
+          <footer>— The Age</footer>
+        </blockquote>
       </div>
-      <div class="col-sm-6 col-md-4" data-aos="zoom-in" data-aos-delay="800">
-        <img src="images/opera9.jpg" class="img-fluid rounded shadow-sm hover-zoom" alt="Opera production photo 9">
+
+      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="700">
+        <img src="images/opera6.jpg" alt="Opera production 6">
+      </div>
+
+      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="800">
+        <img src="images/opera7.jpg" alt="Opera production 7">
+      </div>
+
+      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="900">
+        <img src="images/opera8.jpg" alt="Opera production 8">
+      </div>
+
+      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="1000">
+        <img src="images/opera9.jpg" alt="Opera production 9">
       </div>
     </div>
   </div>
 </section>
-
-
-    <!-- REVIEWS -->
-    <section class="reviews py-5">
-      <div class="container">
-        <h2 class="media-section-title text-center mb-5">Critical Acclaim</h2>
-        <div class="row g-4">
-          <div class="col-md-4">
-            <div class="card bg-light text-dark shadow-sm h-100 border-0">
-              <div class="card-body">
-                <p class="review-text">“Kleeman’s voice exudes warmth and intelligence — a commanding presence.”</p>
-                <p class="review-source fw-bold mb-0">— The Sydney Morning Herald</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card bg-light text-dark shadow-sm h-100 border-0">
-              <div class="card-body">
-                <p class="review-text">“A masterclass in subtlety and precision — deeply moving.”</p>
-                <p class="review-source fw-bold mb-0">— Limelight Magazine</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card bg-light text-dark shadow-sm h-100 border-0">
-              <div class="card-body">
-                <p class="review-text">“Kleeman commands the stage with effortless musicality and psychological insight.”</p>
-                <p class="review-source fw-bold mb-0">— The Age</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
